--- a/GMLogger.csproj
+++ b/GMLogger.csproj
@@ -6,7 +6,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A367032C-5C99-4F68-87BF-9E00B5ED52E4}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Logger</RootNamespace>
     <AssemblyName>Logger</AssemblyName>
@@ -54,7 +54,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>GMLogger.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Devart.Data, Version=5.0.1555.0, Culture=neutral, PublicKeyToken=09af7300eec23701, processorArchitecture=MSIL">
@@ -72,6 +73,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="GMDataBase">
+      <HintPath>..\..\GMDataBase\GMDataBase\bin\Debug\GMDataBase.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Data.Sqlite, Version=1.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Data.Sqlite.1.1.0\lib\net451\Microsoft.Data.Sqlite.dll</HintPath>
@@ -214,20 +218,6 @@
     <Compile Include="Appenders\MessageBoxAppender.cs" />
     <Compile Include="Appenders\MessageBoxCustomAppender.cs" />
     <Compile Include="Appenders\ToastAppender.cs" />
-    <Compile Include="DataBase\Database\ConnectionStringBuilder.cs" />
-    <Compile Include="DataBase\Database\DatabaseManager.cs" />
-    <Compile Include="DataBase\Database\DbConfig.cs" />
-    <Compile Include="DataBase\Database\DbEntityManager.cs" />
-    <Compile Include="DataBase\Database\DbSettings.cs" />
-    <Compile Include="DataBase\Entities\Car.cs" />
-    <Compile Include="DataBase\Entities\Cat.cs" />
-    <Compile Include="DataBase\Interfaces\IConnectionStringBuilder.cs" />
-    <Compile Include="DataBase\Interfaces\ICrudMethods.cs" />
-    <Compile Include="DataBase\Interfaces\IDatabaseManager.cs" />
-    <Compile Include="DataBase\Interfaces\IDbEntityManager.cs" />
-    <Compile Include="DataBase\Interfaces\IDbSettings.cs" />
-    <Compile Include="DataBase\Utils\DataBaseUtils.cs" />
-    <Compile Include="DataBase\Utils\ProviderType.cs" />
     <Compile Include="Interfaces\IAppender.cs" />
     <Compile Include="Appenders\AppenderManager.cs" />
     <Compile Include="Appenders\ConsoleAppender.cs" />
