--- a/packages.config
+++ b/packages.config
@@ -13,12 +13,14 @@
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="MSBuild.SonarQube.Runner.Tool" version="3.0.0" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
   <package id="SQLite.CodeFirst" version="1.3.0.17" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net461" developmentDependency="true" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
